changed some things

--- a/Week1.ipynb
+++ b/Week1.ipynb
@@ -8,11 +8,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Variables"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -23,11 +35,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello!\n",
+      "something else\n"
+     ]
+    }
+   ],
    "source": [
-    "# This is not possible in Python. You always have to assign a variable when defining a value (even if you assign a 0 or None value)."
+    "print(\"Hello!\")\n",
+    "print(\"something else\")"
    ]
   },
   {
@@ -597,7 +619,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
